# streamlit-coleta

./: .gitignore  README.md  app.py  coleta.py  coleta_postgres_sqlalchemy.py  pyproject.toml
projeto_coleta/: coleta.py  coleta_postgres_sqlalchemy.py  survey_data.csv
